Update some old refs

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <a id="jqueryequalheights" class="anchor" href="#jqueryequalheights" aria-hidden="true">
                     <span class="octicon octicon-link"></span>
                 </a>
-                jquery.equalHeights
+                jquery.matchHeights
             </h1>
 
             <p>
-                jquery.equalHeights is a crazy simple jquery plugin to set a group of elements to the
+                jquery.matchHeights is a crazy simple jquery plugin to set a group of elements to the
                 same height.
             </p>
 
@@ -59,7 +59,7 @@
             </h2>
 
             <pre><code>
-$('.some-css-selector').equalHeights()
+$('.some-css-selector').matchHeights()
             </code></pre>
 
             <p>
@@ -69,13 +69,13 @@ $('.some-css-selector').equalHeights()
 
             <pre><code>
 $('.some-wrapper-class').each(function () {
-    $(this).find('.some-css-selector').equalHeights()
+    $(this).find('.some-css-selector').matchHeights()
 })
             </code></pre>
 
             <p>
                 If your DOM structure is such that all your elements that need to be the same height are
-                siblings you can use the above snippet instead of calling <code>equalHeights</code> on
+                siblings you can use the above snippet instead of calling <code>matchHeights</code> on
                 every single group of elements on the page.
             </p>
 
